kyverno-chainsaw/assertion-folder/ephemeral-cluster/expected-cluster_secret_store.yaml
---
apiVersion: external-secrets.io/v1beta1
kind: ClusterSecretStore
metadata:
  name: onepass
status:
  capabilities: ReadOnly 
  conditions:
    - message: store validated
      reason: Valid 
      status: "True"
      type: Ready
