kyverno-chainsaw/assertion-folder/ephemeral-cluster/expected-deployment-tailscale.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: operator
  namespace: tailscale 
status:
  availableReplicas: 1
  readyReplicas: 1
