kyverno-chainsaw/assertion-folder/ephemeral-cluster/expected-svc-external-secrets.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: central-onepass-connect
  namespace: external-secrets
  annotations:
    tailscale.com/tailnet-ip: 100.83.181.82
spec:
#  (conditions[?external
  #contains(externalName, ['ts-central-onepass-connect-[*].tailscale.svc.cluster.local']) 
# (externalName: (contains(@, 'ts-central-onepass-connect'))): true
#  externalName: 'ts-central-onepass-connect-[*].tailscale.svc.cluster.local' 
#
#regex_match(spec.externalName, '^ts-central-onepass-connect-[a-zA-Z0-9]+\.tailscale\.svc\.cluster\.local$')

## Working2  
#  externalName: 
#    (starts_with(@, 'ts-central-onepass-connect')): true

## Working2
  externalName:
    (contains(@, 'ts-central-onepass-connect')): true

## Not working
#  externalName:
#    (pattern_match('ts-central-onepass-connect-*.tailcale.svc.cluster.local', @)): true
