kyverno-chainsaw/chainsaw-config.yaml
apiVersion: chainsaw.kyverno.io/v1alpha2
kind: Configuration
metadata:
  name: omni-ephemeral-config 
spec:
  #  namespace:
  #    name: monitoring
  cleanup:
    skipDelete: false
  execution:
    failFast: true
    parallel: 4
